--- a/main/templates/main/components/site_header.html
+++ b/main/templates/main/components/site_header.html
@@ -1,8 +1,8 @@
 {% load static %}
 <header class="site-header">
   <div class="site-header-item">
-    <a class="site-header-brand" href="{% url 'role_redirect' %}" style="font-size: 1.8rem; font-weight: bold; color: black; text-decoration: none;">
-      🌍 UniHand
+    <a class="site-header-brand" style="font-size: 1.8rem; font-weight: bold; color: black; text-decoration: none;">
+      UniHand
     </a>
   </div>
   <div class="site-header-menu">
@@ -47,7 +47,7 @@
     <p class="subtext">Your Smart University Companion</p>
     <p class="description">Enhancing productivity for Students, Professors, and University Management.</p>
     <br>
-    <a href="{% url 'login' %}" class="cta-button">🚀 Log in</a>
+    <a href="{% url 'login' %}" class="cta-button"> Log in</a>
   </section>
 
   <!-- WHY CHOOSE UNIHAND -->
@@ -69,7 +69,6 @@
     <div class="text-box">
       <p>📘 <strong>Students:</strong> View enrolled courses, track deadlines, and book appointments.</p>
       <p>👨‍🏫 <strong>Professors:</strong> Manage course enrollments, schedule classes, and update grades.</p>
-      <p>🏛 <strong>Admins:</strong> Oversee academic operations and manage university records.</p>
     </div>
   </section>
 
