--- a/main/static/main/css/todo.css
+++ b/main/static/main/css/todo.css
@@ -25,7 +25,7 @@ table.todo-list th, table.todo-list td {
 }
 
 table.todo-list th {
-    background-color: #17808c;
+    background-color: #007bff;
     color: #fff;
     font-weight: bold;
 }
