--- a/static/main/css/appointment.css
+++ b/static/main/css/appointment.css
@@ -37,7 +37,7 @@ table.appointment-table.student th, table.appointment-table.student td {
 }
 
 table.appointment-table.student th {
-    background-color: #17808c;
+    background-color: #007bff;
     color: #fff;
     font-weight: bold;
 }
@@ -74,7 +74,7 @@ table.appointment-table.professor th, table.appointment-table.professor td {
 }
 
 table.appointment-table.professor th {
-    background-color: #17808c;
+    background-color: #007bff;
     color: #fff;
     font-weight: bold;
 }
