--- a/static/main/css/grades.css
+++ b/static/main/css/grades.css
@@ -22,8 +22,8 @@
 }
   
 .grades-table th {
-    background-color: #47a86b;
-    color: #333;
+    background-color: #007bff;
+    color: white;
     font-weight: bold;
 }
 
